// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginProvider login getUser error 1`] = `
{
  "response": {
    "data": {
      "message": "getUser error",
    },
    "status": 401,
  },
}
`;

exports[`LoginProvider login getUser error 2`] = `undefined`;

exports[`LoginProvider login getUser error: enqueueSnackbar calls 1`] = `
[
  [
    "getUser error",
    {
      "variant": "error",
    },
  ],
  [
    "getUser error",
    {
      "variant": "error",
    },
  ],
]
`;

exports[`LoginProvider login ng 1`] = `
{
  "response": {
    "data": {
      "message": "login error",
    },
    "status": 401,
  },
}
`;

exports[`LoginProvider login ng 2`] = `undefined`;

exports[`LoginProvider login ng: enqueueSnackbar calls 1`] = `
[
  [
    "login error",
    {
      "variant": "error",
    },
  ],
]
`;

exports[`LoginProvider login ok 1`] = `
{
  "expireAt": "xxxx",
  "id": "user1",
  "requirePasswordUpdate": true,
}
`;

exports[`LoginProvider login ok 2`] = `
{
  "displayName": "user1 name",
  "id": "user1",
  "role": "cosmo-admin",
}
`;

exports[`LoginProvider login ok 3`] = `
{
  "expireAt": "xxxx",
  "id": "user1",
  "requirePasswordUpdate": true,
}
`;

exports[`LoginProvider login ok 4`] = `
{
  "displayName": "user1 name",
  "id": "user1",
  "role": "cosmo-admin",
}
`;

exports[`LoginProvider login ok: enqueueSnackbar calls 1`] = `[]`;

exports[`LoginProvider logout error 1`] = `
{
  "response": {
    "data": {
      "message": "logout error",
    },
    "status": 500,
  },
}
`;

exports[`LoginProvider logout error: enqueueSnackbar calls 1`] = `
[
  [
    "logout error",
    {
      "variant": "error",
    },
  ],
]
`;

exports[`LoginProvider logout error: logout calls 1`] = `
[
  [],
]
`;

exports[`LoginProvider logout ok 1`] = `undefined`;

exports[`LoginProvider logout ok: enqueueSnackbar calls 1`] = `[]`;

exports[`LoginProvider logout ok: logout calls 1`] = `
[
  [],
]
`;

exports[`LoginProvider refreshUserInfo logined ok 1`] = `undefined`;

exports[`LoginProvider refreshUserInfo logined ok 2`] = `
{
  "displayName": "user1 name",
  "id": "user1",
  "role": "cosmo-admin",
}
`;

exports[`LoginProvider refreshUserInfo logined ok: enqueueSnackbar calls 1`] = `[]`;

exports[`LoginProvider refreshUserInfo not login ok 1`] = `undefined`;

exports[`LoginProvider refreshUserInfo not login ok 2`] = `undefined`;

exports[`LoginProvider refreshUserInfo not login ok: enqueueSnackbar calls 1`] = `[]`;

exports[`LoginProvider updatePassword error 1`] = `
{
  "message": "updataPassword error",
}
`;

exports[`LoginProvider updatePassword error: enqueueSnackbar calls 1`] = `
[
  [
    "updataPassword error",
    {
      "variant": "error",
    },
  ],
]
`;

exports[`LoginProvider updatePassword error: putUserPassword calls 1`] = `
[
  [
    "user1",
    {
      "currentPassword": "oldpw",
      "newPassword": "newpw",
    },
  ],
]
`;

exports[`LoginProvider updatePassword ok 1`] = `
{
  "config": {},
  "data": {
    "message": "ok",
    "user": {
      "displayName": "user1 name",
      "id": "user1",
      "role": "cosmo-admin",
    },
  },
  "headers": {},
  "request": {},
  "status": 200,
  "statusText": "ok",
}
`;

exports[`LoginProvider updatePassword ok: enqueueSnackbar calls 1`] = `[]`;

exports[`LoginProvider updatePassword ok: putUserPassword calls 1`] = `
[
  [
    "user1",
    {
      "currentPassword": "oldpw",
      "newPassword": "newpw",
    },
  ],
]
`;

exports[`LoginProvider verify getUser error 1`] = `undefined`;

exports[`LoginProvider verify getUser error: enqueueSnackbar calls 1`] = `
[
  [
    "getUser error",
    {
      "variant": "error",
    },
  ],
]
`;

exports[`LoginProvider verify ng / id is undefined 1`] = `undefined`;

exports[`LoginProvider verify ng / id is undefined: enqueueSnackbar calls 1`] = `[]`;

exports[`LoginProvider verify ng 1`] = `undefined`;

exports[`LoginProvider verify ng: enqueueSnackbar calls 1`] = `[]`;

exports[`LoginProvider verify ok 1`] = `
{
  "displayName": "user1 name",
  "id": "user1",
  "role": "cosmo-admin",
}
`;

exports[`LoginProvider verify ok: enqueueSnackbar calls 1`] = `[]`;
